--- a/style_homepage.css
+++ b/style_homepage.css
@@ -3,33 +3,45 @@ body{
 	font-family : 'Muli';
 }
 
+label{
+    font-size : 20px;
+    text-align : left;
+}
+
+input[type=text], input[type=password], input[type=email] {
+    width: 20%;
+    height : 25px;
+}
+
 h1{
 	text-align : center;
 	font-size : 50px;
-	
 }
 
 ul{
-	list-style-type : none;
+    font-size : 20px;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: grey;
 }
 
 li{
-	display: inline;
-	width : 150px;
-	float : left;
-	text-align : center;
-	font-size : 20px;
-	background-color : powderblue;
+    float: left;
 }
 
-li:hover {
-	color : grey;
+li a{
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
 }
 
-mark{
-	background-color : grey;
+li a:hover{
+    background-color: #111;
 }
-
 .header3{
 	font-size : 25px;
 }
